# 134

./: README.md  bottleDetector.xml  hw2_p6_train.m
detection_ws/devel/: .catkin  .rosinstall  setup.sh
detection_ws/devel/lib/detection/: detection_node
detection_ws/devel/lib/pkgconfig/: detection.pc
detection_ws/install/: .rosinstall  _setup_util.py  setup.sh
detection_ws/install/include/detection/: Coord.h  CoordVec.h
detection_ws/install/lib/pkgconfig/: detection.pc
detection_ws/src/detection/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
detection_ws/src/detection/src/: detection_node.cpp  detection_node.cpp~
hebi_ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
hebi_ros_ws/devel/include/hebiros/: AddGroupFromNamesSrv.h  AddGroupFromNamesSrvRequest.h  AddGroupFromNamesSrvResponse.h  AddGroupFromUrdfSrv.h  AddGroupFromUrdfSrvRequest.h  AddGroupFromUrdfSrvResponse.h  CommandMsg.h  EntryListMsg.h  EntryListSrv.h  EntryListSrvRequest.h  EntryListSrvResponse.h  EntryMsg.h  FeedbackMsg.h  PidGainsMsg.h  SendCommandWithAcknowledgementSrv.h  SendCommandWithAcknowledgementSrvRequest.h  SendCommandWithAcknowledgementSrvResponse.h  SetCommandLifetimeSrv.h  SetCommandLifetimeSrvRequest.h  SetCommandLifetimeSrvResponse.h  SetFeedbackFrequencySrv.h  SetFeedbackFrequencySrvRequest.h  SetFeedbackFrequencySrvResponse.h  SettingsMsg.h  SizeSrv.h  SizeSrvRequest.h  SizeSrvResponse.h  TrajectoryAction.h  TrajectoryActionFeedback.h  TrajectoryActionGoal.h  TrajectoryActionResult.h  TrajectoryFeedback.h  TrajectoryGoal.h  TrajectoryResult.h  WaypointMsg.h
hebi_ros_ws/devel/lib/hebiros_advanced_examples/: example_gazebo_node  example_mobile_robot_node  example_moveit_node  example_rviz_node  example_set_gains_node
hebi_ros_ws/devel/lib/hebiros_basic_examples/: example_01_lookup_node  example_02_feedback_node  example_03_command_node
hebi_ros_ws/devel/lib/pkgconfig/: hebiros.pc  hebiros_description.pc  (+3 more)
matlab/: hw1.m  hw1p7.m  hw1p8.m  hw2.m  hw2_bottle_tracker.m  startup.m  test.m
matlab/hw2/: hw2.asv  hw2.m  hw2_contact_detection.m  hw2_face_tracker.m  hw2_histogram_tracker.m  hw2_histogram_tracker_bottle.m  hw2_torque_cancel.m
matlab/hw3/: hw3_face_tracker.m
ros/: moveto.cpp  myrobot_node.cpp  simple_node.cpp
ros_ws/: ros_ifconfig
ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros_ws/src/command/: CMakeLists.txt  package.xml
ros_ws/src/ikin/: CMakeLists.txt  package.xml
ros_ws/src/moveto/: CMakeLists.txt  package.xml  usage.txt
ros_ws/src/moveto/launch/: gui.launch  moveto.launch
ros_ws/src/moveto/msg/: Joints.msg  Point.msg  Tip.msg
ros_ws/src/moveto/src/: ikin.cpp  ikin.cpp~  moveto.cpp  moveto.cpp~
ros_ws/src/moveto/srv/: Grab.srv  IKin.srv  IsMoving.srv  MoveJoints.srv  MoveTip.srv  ThrowTo.srv
ros_ws/src/moveto/urdf/: robot.urdf  team2_robot.urdf
ros_ws/src/myrobot/: CMakeLists.txt
ros_ws/src/simple/: CMakeLists.txt  package.xml
urdf/: viewurdf_team2_robot.launch
(+281 files in other folders)
