<?xml version="1.0"?>
<package format="2">
  <name>moveto</name>
  <version>0.0.0</version>
  <description>The moveto package</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hebiros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>hebiros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>hebiros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  
  <!-- Add these for custom messages/services! -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  
  <export>
  </export>
</package>
